Clean up outdated md files, authorization form, search form

--- a/jobflow-backend/.env.example
+++ b/jobflow-backend/.env.example
@@ -9,8 +9,11 @@ MONGODB_URI=mongodb://jobflow_admin:jobflow_dev_password@localhost:27017/jobflow
 
 # JWT Authentication
 # IMPORTANT: Change these in production!
+# Generate secure secrets: node -e "console.log(require('crypto').randomBytes(64).toString('base64'))"
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
-JWT_EXPIRES_IN=7d
+JWT_EXPIRES_IN=15m
+JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-in-production
+JWT_REFRESH_EXPIRES_IN=7d
 
 # API Configuration
 API_PREFIX=api
