--- a/jobflow-frontend/.env.example
+++ b/jobflow-frontend/.env.example
@@ -3,3 +3,8 @@ VITE_API_BASE_URL=http://localhost:3000/api/v1
 
 # Application Configuration
 VITE_APP_NAME=JobFlow
+
+# HH.ru API Configuration
+VITE_HH_API_LOCALE=EN
+# HH.ru dictionary cache duration in hours (default: 3 hours)
+VITE_HH_CACHE_HOURS=3
