--- a/jobflow-frontend/package.json
+++ b/jobflow-frontend/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.13.4",
     "date-fns": "^4.1.0",
     "formik": "^2.4.9",
+    "notistack": "^3.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
